- fixed checkout display order overflow.

--- a/client/src/styles/checkoutScreen.css
+++ b/client/src/styles/checkoutScreen.css
@@ -2,6 +2,7 @@
     display: flex;
     align-items: flex-start;
     justify-content: flex-end;
+    width: 100%;
     height: 60vh;
 }
 
@@ -16,6 +17,8 @@
     box-shadow: inset 0 0 10px #adadad;
     border: 1px solid #adadad;
     margin: 0 2rem;
+
+    overflow: hidden auto;
 }
 
 .checkout-display-orders,
